# divkc

./: .gitignore  Dockerfile  LICENSE  README.md  compile_formula.sh  docker_compile_formula.sh  gen.sh  info
bench_select/: d4_done.csv  d4_fail.csv  gen_fail_file.py  get.sh  smp_r.sh
bench_select/f/: compress.sk_17_291.cnf.smp  enqueueSeqSK.sk_10_42.cnf.smp  listReverse.sk_11_43.cnf.smp  logcount.sk_16_86.cnf.smp  parity.sk_11_11.cnf.smp  signedAvg.sk_8_1020.cnf.smp  xpose.sk_6_134.cnf.smp
cpp_sampler/: Makefile  sampler.def
cppddnnf/: CMakeLists.txt  Makefile  Makefile.old  README.md  appmc.def  build.ninja  gem.cpp  gen.cpp  lmc.def  pc.def  rsampler.def  run.sh  sampler.def
cppddnnf/src/: appmc.cpp  lmc.cpp  main.cpp  nnf.cpp  nnf.hpp  pc.cpp  pdac.cpp  pdac.hpp  rhsampler.cpp  rsampler.cpp  sampler.cpp  var.cpp  var.hpp  xoshiro.hpp
cppddnnf/test/: litset.cpp  variable.cpp
cppddnnfv2/: CMakeLists.txt  appmc.def  cppddnnf.def  lmc.def
cppddnnfv2/src/: appmc.cpp  lmc.cpp  main.cpp  nnf.cpp  nnf.hpp  pc.cpp  pdac.cpp  pdac.hpp  sampler.cpp  var.cpp  var.hpp
ddnnf/: mc.csv  run.sh
fvstats/: PartitionInfo.py  dDNNF.py  info.py  info2.py
lpa/: Makefile
pagmo_splitter/: Makefile  splitter.def
pagmo_up/: Makefile  up.def
pd4/: d4_source.txt  pd4.def
proj_res/: base.csv  prj.csv  rem.csv  run.py  s0.csv  s1.csv  split0.csv  split1.csv  up.csv
projection/: Makefile  README.md  build.ninja  gen.cpp  projection.def
res/: d4-2025.01.26.csv  d4-2025.02.03.csv  pd4-2025.01.26.csv  pd4-2025.02.03.csv  req.sql  run.py
results/: README.md  cnf.bounds.csv  cnf.clt.csv  gen_tables.py
sampler/: PartitionInfo.py  appmc.py  dDNNF.py  sampler.def  sampler.py
singularity/: d4.def
smp/: l  t.cnf
splitter/: Doxyfile  Makefile  README.md  build.ninja  gen.cpp  splitter.def
xp/: d4_128.csv  d4_split.csv
(+173 files in other folders)
